generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id          Int      @id @default(autoincrement())
  firstName   String?
  username    String?
  email       String   @unique
  password    String
  role        Role     @default(USER)
  createdAt   DateTime @default(now())
  updatedAt   DateTime @updatedAt
  clanId      Int? // Clé étrangère pour Clan
  Clan        Clan?    @relation("UserClan", fields: [clanId], references: [id])
  LeadingClan Clan?    @relation("ClanLeader")
}

model Clan {
  id        Int      @id @default(autoincrement())
  name      String
  victories Int
  defeats   Int
  createdAt DateTime @default(now())
  leaderId  Int      @unique
  Leader    User     @relation("ClanLeader", fields: [leaderId], references: [id])
  Members   User[]   @relation("UserClan")
}

enum Role {
  USER
  ADMIN
}
